# url-shortener

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/migrations/: 001_init.sql  002_nullable.sql
src/service/: error.rs  handlers.rs  migrator.rs  mod.rs  server.rs  types.rs  url_shortener.rs
static/: app.js  index.html  styles.css
