[package]
name = "url-shortener"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.7"
axum-server = "0.7.3"
base62 = "2.2.3"
chrono = "0.4.42"
dotenvy = "0.15.7"
governor = "0.10.2"
prometheus = "0.14.0"
redis = { version = "0.32.7", features = ["tokio-comp", "aio"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.7", features = ["fs"] }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
